完善日志组件